using generated models for Registries